# py_f2recom

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: test.yml
GlobalAssessment/: 01_OCEAN_ICE.ipynb  04_ECO.ipynb  Alk_GLODAP.ipynb  Biomass_Maredat.ipynb  Biomass_maps_all_FT.ipynb  CO2f_Takahashi.ipynb  CO2f_timeseries.ipynb  Carbs_profiles.ipynb  ChlArctic.ipynb  ChlGlobal.ipynb  ChlSouthern.ipynb  Chl_NPP_latitudinal.ipynb  DFe_PISCES.ipynb  DFe_timeseries.ipynb  DIC_GLODAP.ipynb  DIN_WOA.ipynb  DIN_timeseries.ipynb  DO2_WOA.ipynb  DO2_profiles.ipynb  DSi_WOA.ipynb  DSi_timeseries.ipynb  MLD.ipynb  NPPArctic.ipynb  NPPGlobal.ipynb  NPP_timeseries.ipynb  Nutrients_profiles.ipynb  Py_f2recom_toolbox.ipynb  SEAICE_timeseries.ipynb  Sal_WOA.ipynb  SeasonalCycle.ipynb  TS_PHC3.ipynb  TS_profiles.ipynb  Temp_WOA.ipynb  pCO2_Chauetal.ipynb  pCO2_SOCAT.ipynb
modules/: .gitmodules
src/py_f2recom/: __init__.py  bars.py  cli.py  core.py  loading.py  maps.py  plotting.py  profiles.py  timeseries.py
tests/: test_core.py
